fix: 修改退出和导航

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>音乐网站</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="static/title4.jpeg" type="image/x-icon" />
+    <link rel="shortcut icon" href="static/title4.jpeg" type="image/x-icon"  />
+    <title>清香音乐网-后台</title>
   </head>
   <body>
     <div id="app"></div>
